syntax = "proto3";

package review;

option go_package = "github.com/temryakov/go-backend-book-app/review-service";

message GetBookRequest {
    int32 id = 1;
}
message GetBookResponse {
    string title = 1;
    string author = 2;
}
message GetUserRequest {
    int32 id = 1;
}
message GetUserResponse {
    string name = 1;
}

service ReviewService {
    rpc GetBook(GetBookRequest) returns (GetBookResponse);
    rpc GetUser(GetUserRequest) returns (GetUserResponse);
}
